--- a/resources/application-development.properties
+++ b/resources/application-development.properties
@@ -13,3 +13,4 @@ spring.mail.host=smtp.gmail.com
  spring.mail.password=pxojpknfxdvjslut
  spring.mail.properties.mail.smtp.auth=true
  spring.mail.properties.mail.smtp.starttls.enable=true
+apiKey=AIzaSyCtPm_1RFZHhvrBw95zXKoCHwbba26HJqw
