--- a/resources/application-production.properties
+++ b/resources/application-production.properties
@@ -16,3 +16,4 @@ spring.datasource.url=${DB_URL}
  
  stripe.api-key=${STRIPE_API_KEY}
  stripe.webhook-secret=${STRIPE_WEBHOOK_SECRET}
+apiKey=${GOOGLE_MAP_API_KEY}
